Fix spacing

--- a/src/pages/SelectedPost/SelectedPost.scss
+++ b/src/pages/SelectedPost/SelectedPost.scss
@@ -16,6 +16,10 @@
     }
 
     &__codes {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-bottom: 1rem; 
         @include tablet {
             flex: 1;
         }
@@ -45,12 +49,6 @@
 
     &__title {
         font-size: 2rem;
-    }
-
-    &__codes {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
     }
 
     &__editor {
